# selfu

./: .gitignore  LICENSE  README.md  README_zh.md  justfile  main.py  pyproject.toml
src/selfu/: __init__.py  cli.py  completions.py  runner.py  tui.py  ui.py
src/selfu/checks/: __init__.py  cpu.py  disk.py  health.py  memory.py  network.py  security.py  system.py  updates.py
