[project]
name = "typer-selfu"
version = "0.1.0"
description = "Selfu - a sysadmin self-check toolkit built with typer/rich/textual"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.60.0",
]

[project.scripts]
selfu = "selfu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selfu"]
